# tbd-admin

./: .env.example  bfa.py  helpers.py  main.py  pyproject.toml  readme.md  shop.py
data/: shipping-rates.csv
data/bfa/: 525-front.json  Product List + tags.csv  back.json  bfa-product-tags.csv
data/cocolea/: cocolea-products-fix.csv  cocolea-products.csv
suppliers/: bfa.py  cocolea.py
